--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -29,8 +29,5 @@
     <img src="assets/imgs/logo.png">
   </div>
   
-  <p>ANY KAlam will be good here ANY KAlam will be good here ANY KAlam will be good here ANY KAlam will be good here ANY KAlam will be good here
-    ANY KAlam will be good hereANY KAlam will be good hereANY KAlam will be good hereANY KAlam will be good here
-    ANY KAlam will be good hereANY KAlam will be good hereANY KAlam will be good hereANY KAlam will be good here
-  </p>
+  <p>{{about.about_ar}}  </p>
 </ion-content>
