--- a/src/pages/invoice/invoice.html
+++ b/src/pages/invoice/invoice.html
@@ -8,7 +8,7 @@
 <ion-row>
   <ion-col col-6 class="colinvoice">{{'INVOICE'|translate}}
   </ion-col>
-  <ion-col col-6 class="colno">#{{invoice[0].historyinfo_id}}</ion-col>
+  <ion-col col-6 class="colno">#{{invoice[0].order_id}}</ion-col>
 </ion-row>
 
 <!-- <p>{{invoice.created_at|date}}</p> -->
@@ -19,12 +19,12 @@
 </ion-row>
 <ion-row>
     <ion-col col-6 class="colleft">{{'Payment Method'|translate}}</ion-col>
-    <ion-col col-6 class="colright">{{invoice[0].payment_method}}</ion-col>
+    <ion-col col-6 class="colright">{{invoice[0].payment}}</ion-col>
 </ion-row>
 
 <ion-row>
   <ion-col col-6 class="colleft">{{'Items'|translate}}</ion-col>
-  <ion-col col-6 class="colright">{{invoice[1].itemsNo}}</ion-col>
+  <ion-col col-6 class="colright">{{invoice[0].order_deatails_count}}</ion-col>
 </ion-row>
 
 <ion-row style="padding:0;margin: 45px 0 0">
@@ -36,8 +36,8 @@
   <ion-col col-6 class="totalprice">{{invoice[0].total_price}} {{'SAR'|translate}}</ion-col>
 </ion-row>
 
-<!-- <ion-row style="padding-top:0;">
+<ion-row style="padding-top:0;">
   <button ion-button block class="home" (click)="gohome()">{{'Go Home Page' |translate}}</button>
-</ion-row> -->
+</ion-row>
 
 </ion-content>
