--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -41,9 +41,9 @@
 
     <ion-row style="text-align: center;">
      
-      <ion-col col-4><img src="assets/imgs/facebook.png" (click)= "logFace()"></ion-col>
-      <ion-col col-4><img src="assets/imgs/twitter.png"(click)="twitterlog()"></ion-col>
-      <ion-col col-4><img src="assets/imgs/google-plus.png"></ion-col>
+      <ion-col col-6><img src="assets/imgs/facebook.png" (click)= "logFace()"></ion-col>
+      <ion-col col-6><img src="assets/imgs/twitter.png"(click)="twitterlog()"></ion-col>
+      <!-- <ion-col col-4><img src="assets/imgs/google-plus.png"></ion-col> -->
     </ion-row>
       <ion-row class="sign">
           <ion-col col-12>{{'DO NOT HAVE AN ACCOUNT ?'|translate}}<span (click)="signUp()" style="color:orange;padding: 10px">{{'SIGN UP'|translate}}</span>
