--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -22,10 +22,10 @@
 <ion-content>
 <yellowhead></yellowhead>
 <p></p>
-   <ion-row class="cont">
+   <!-- <ion-row class="cont">
    <ion-col col-10>{{'Recommend to friend'|translate}}</ion-col>
    <ion-col col-2> <ion-icon name="arrow-forward"></ion-icon></ion-col>
- </ion-row>
+ </ion-row> -->
 
   <ion-row class="cont" (click)="goTerms()">
    <ion-col col-10>{{'Terms and conditions'|translate}}</ion-col>
