--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -11,5 +11,5 @@
  <ion-tab [root]="tab3Root" >
   </ion-tab>
  <ion-tab [root]="tab4Root" class="person"></ion-tab>
- <ion-tab [root]="tab5Root" class="settings"></ion-tab>
+ <ion-tab [root]="tab5Root" tabTitle=" {{'More'|translate}} " ></ion-tab>
 </ion-tabs>
