--- a/src/pages/terms/terms.html
+++ b/src/pages/terms/terms.html
@@ -28,8 +28,5 @@
     <img src="assets/imgs/logo.png">
   </div>
   
-  <p>ANY KAlam will be good here ANY KAlam will be good here ANY KAlam will be good here ANY KAlam will be good here ANY KAlam will be good here
-    ANY KAlam will be good hereANY KAlam will be good hereANY KAlam will be good hereANY KAlam will be good here
-    ANY KAlam will be good hereANY KAlam will be good hereANY KAlam will be good hereANY KAlam will be good here
-  </p>
+  <p>{{about.policy_ar}}    </p>
 </ion-content>
